--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2722,6 +2722,19 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "d4d1c6f6": {
+          "id": "d4d1c6f6",
+          "path": "lib/leaflet/images/forward.png",
+          "output": "lib/leaflet/images/forward.png",
+          "name": "forward.png",
+          "category": "IMAGE",
+          "size": 15022,
+          "type": "png",
+          "initialSize": 15022,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
