Activity 6 completed- overlay

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2722,6 +2722,45 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "f22999b7": {
+          "id": "f22999b7",
+          "path": "img/reverse.png",
+          "output": "img/reverse.png",
+          "name": "reverse.png",
+          "category": "IMAGE",
+          "size": 828,
+          "type": "png",
+          "initialSize": 828,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "6ec22fe5": {
+          "id": "6ec22fe5",
+          "path": "img/originalrev.png",
+          "output": "img/originalrev.png",
+          "name": "originalrev.png",
+          "category": "IMAGE",
+          "size": 25050,
+          "type": "png",
+          "initialSize": 25050,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a52aa782": {
+          "id": "a52aa782",
+          "path": "img/forward.png",
+          "output": "img/forward.png",
+          "name": "forward.png",
+          "category": "IMAGE",
+          "size": 826,
+          "type": "png",
+          "initialSize": 826,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
