Leaflet Lab Assignment Completed

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,19 @@
       "name": "my_website",
       "path": "",
       "files": {
+        "50099870": {
+          "id": "50099870",
+          "path": "img/newrev.png",
+          "output": "img/newrev.png",
+          "name": "newrev.png",
+          "category": "IMAGE",
+          "size": 42400,
+          "type": "png",
+          "initialSize": 42400,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "62268886": {
           "id": "62268886",
           "path": "lib/leaflet/Leaflet.markercluster-master/example/realworld.50000.1.js",
@@ -2761,6 +2774,19 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "3ebc7ea4": {
+          "id": "3ebc7ea4",
+          "path": "img/newfor.png",
+          "output": "img/newfor.png",
+          "name": "newfor.png",
+          "category": "IMAGE",
+          "size": 15867,
+          "type": "png",
+          "initialSize": 15867,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
